added few tasks in Level_3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Exam_42 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_Exam_42 main11.c Level_0/aff_a.c Level_0/aff_first_param.c Level_0/aff_last_param.c Level_1/first_word.c Level_1/ft_strcpy.c)
+add_executable(C_Exam_42 main11.c Level_3/add_prime_sum.c Level_0/aff_a.c Level_0/aff_first_param.c Level_0/aff_last_param.c Level_1/first_word.c Level_1/ft_strcpy.c Level_3/epur_str.c Level_3/expand_str.c Level_3/ft_list_size.c Level_3/ft_list.h Level_3/ft_range.c Level_3/ft_rrange.c Level_3/tab_mult.c Level_3/hidenp.c)
