--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Exam_42 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_Exam_42 )
+add_executable(C_Exam_42 Level_2/alpha_mirror.c Level_2/do_op.c Level_2/do_op.h Level_2/ft_atoi.c)
