--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Exam_42 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_Exam_42 Level_3/str_capitalizer.c Level_4/ft_list.h Level_4/ft_list_foreach.c Level_4/ft_list_remove_if.c)
+add_executable(C_Exam_42 Level_4/ft_itoa.c)
