--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Exam_42 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(C_Exam_42 Level_4/ft_split.c)
+add_executable(C_Exam_42 Level_4/brainfuck.c Level_4/fprime.c Level_4/ft_itoa_base.c Level_4/rev_wstr.c)
